--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    implementation group: 'com.loopj.android', name: 'android-async-http', version: '1.4.10'
+    implementation group: 'com.github.bumptech.glide', name: 'glide', version: '4.10.0'
+
+
+
 }
